change ja va version 17