@@ -1,18 +1,17 @@
 package com.mainthreadlab.weinv.mapper;
 
-import com.mainthreadlab.weinv.model.User;
-import com.mainthreadlab.weinv.model.enums.Language;
-import com.mainthreadlab.weinv.model.enums.Role;
 import com.mainthreadlab.weinv.dto.request.UserRequest;
 import com.mainthreadlab.weinv.dto.response.UserResponse;
 import com.mainthreadlab.weinv.dto.security.AuthUserRequest;
+import com.mainthreadlab.weinv.model.User;
+import com.mainthreadlab.weinv.model.enums.Language;
+import com.mainthreadlab.weinv.model.enums.Role;
 import org.apache.commons.lang3.StringUtils;
 import org.mapstruct.Mapper;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Mapper
 public interface UserMapper {
@@ -27,7 +26,7 @@ public interface UserMapper {
         user.setUsername(userRequest.getUsername());
         user.setEventType(userRequest.getEventType());
         user.setLanguage(userRequest.getLanguage() != null ? userRequest.getLanguage() : Language.FR);
-        user.setRoles(userRequest.getRole() != null ? userRequest.getRole().getName() : Role.GUEST.getName());
+        user.setRoles(userRequest.getRole() != null ? userRequest.getRole().getDescription() : Role.GUEST.getDescription());
         user.setPrice(userRequest.getPrice());  // only for responsible
         user.setEnabled(true);
         return user;
@@ -44,7 +43,7 @@ public interface UserMapper {
         userResponse.setUuid(user.getUuid());
         userResponse.setEventType(user.getEventType());
         List<String> roles = Arrays.asList(user.getRoles().split(","));
-        userResponse.setRoles(roles.stream().map(this::mapRole).collect(Collectors.toList()));
+        userResponse.setRoles(roles.stream().map(this::mapRole).toList());
         return userResponse;
     }
 
@@ -63,7 +62,7 @@ public interface UserMapper {
         authUserRequest.setEmail(userRequest.getEmail());
         authUserRequest.setUsername(userRequest.getUsername());
         authUserRequest.setPassword(userRequest.getPassword());
-        authUserRequest.setRoles(userRequest.getRole() != null ? userRequest.getRole().getName() : Role.GUEST.getName());
+        authUserRequest.setRoles(userRequest.getRole() != null ? userRequest.getRole().getDescription() : Role.GUEST.getDescription());
         return authUserRequest;
     }
 
